# humbert

./: .gitignore  README.md  pyproject.toml
humbert/: arithmetic.py  classnumbers.py  modularcurves.py  texassist.py  wnr.py  znr.py
magma-files/: A-1-lemma.m
scripts/: 11_3_prop.py  11_6_lemma.py  9_10_lemma.py  9_9_lemma.py  generate_pics.py  generate_table.py
tests/: install-test.py
