[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "humbert"
version = "1.0.0"
authors = [
  { name="Sam Frengley", email="sam.frengley@bristol.ac.uk" },
]
description = "This package provides the ability to minipulate Hilbert modular and Humbert surfaces of discriminant N^2"
license = { text="MIT" }
readme = "README.md"
requires-python = ">=3.8"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]
dependencies = [
    "numpy==2.0.1",  
    "matplotlib==3.9.2",
    "sympy==1.13.2",
]

[tool.hatch.metadata]
allow-direct-references = true
homepage = "https://github.com/samfrengley/humbert"
repository = "https://github.com/samfrengley/humbert"
bugtrack = "https://github.com/samfrengley/humbert/issues"  
keywords = ["Hilbert modular surface", "Humbert surface"]
  
[tool.hatch.build.targets.wheel]
packages = ["humbert"]